try stable build